# gojuon-quest

./: AGENTS.md  Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: actions.rs  lib.rs  reducer.rs  score.rs  state.rs
src/: app.rs  input.rs  kana.rs  main.rs  scoreboard.rs  ui.rs
